# investment-lab

./: .gitignore  FRONTEND.md  README.md  docker-compose.yml  progress.md
Research/: ROADMAP.md  forecast_demo.py  heston_and_gbm.py  volatility.py  volatility_calc.py  yfinance.ipynb
backend/: .dockerignore  Dockerfile  README.MD  pyproject.toml
backend/src/: __init__.py
backend/src/api/: __init__.py  main.py
backend/src/api/routers/: __init__.py  forecasts.py  prices.py
backend/src/core/: config.py
backend/src/forecast_service/: device_utils.py
backend/src/forecast_service/models/: gbm.py
backend/src/price_service/: converter.py  models.py
backend/src/price_service/fetchers/: __init__.py  alpha_vantage.py  base.py  yfinance_fetcher.py
backend/tests/: README.md  conftest.py  test_base_fetcher.py  test_converter.py  test_crypto_currencies.py  test_models.py
docs/: CONVERSION_ARCHITECTURE.md  GBM-basic.md  QUICKSTART.md  TRIANGULAR_CONVERSION_IMPLEMENTED.md  crypto-currencies.md  crypto-currency-error-handling.md  crypto-currency-logic-explained.md  forecast-architecture.md  progress.md  triangular-conversion-design.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/api/hooks/: index.ts  useConversionQuery.ts  useForecastMutation.ts  usePriceQuery.ts
frontend/src/components/charts/: PriceChart.tsx  (+2 more)
frontend/src/pages/: AssetExplorerPage.tsx  DashboardPage.tsx  ForecastPage.tsx  HomePage.tsx  NotFoundPage.tsx
frontend/src/utils/: constants.ts  formatters.ts  validators.ts
(+21 files in other folders)
